wacom: do not rotate pad devices

as the rotation property is to be removed on pad devices
in the driver.

https://bugzilla.gnome.org/show_bug.cgi?id=679077